Cycles material preview no light #53014

Closed
opened 2017-10-06 19:25:41 +02:00 by Dalai Felinto · 6 comments

Blender Version
Broken: 9ad2c0b615
Worked: 9ad2c0b6154^

Short description of error
Material preview is black unless you use emission materials.

Exact steps for others to reproduce the error
Create a material with Cycles and look at the material preview tab.

cycles-preview.blend

**Blender Version** Broken: 9ad2c0b6154 Worked: 9ad2c0b6154^ **Short description of error** Material preview is black unless you use emission materials. **Exact steps for others to reproduce the error** Create a material with Cycles and look at the material preview tab. [cycles-preview.blend](https://archive.blender.org/developer/F973753/cycles-preview.blend)
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Dalai Felinto self-assigned this 2017-10-06 19:25:54 +02:00
Author
Owner

Added subscriber: @Sergey

Added subscriber: @Sergey
Author
Owner

Note to self (or @Sergey if he feels like):
Take a look at render_preview.c::preview_prepare_scene and see if depsgraph is flushing the visibility / disability properly.

Also: If I take the preview_cycles.blend file and change so that only one collection is enabled this collection preview type works. That's why I think the depsgraph is not being properly updated after set_preview_layer().

Note to self (or @Sergey if he feels like): Take a look at render_preview.c::preview_prepare_scene and see if depsgraph is flushing the visibility / disability properly. Also: If I take the `preview_cycles.blend` file and change so that only one collection is enabled this collection preview type works. That's why I think the depsgraph is not being properly updated after `set_preview_layer()`.

This issue was referenced by fdeb125c7a

This issue was referenced by fdeb125c7a8c9f14369182901648760edc005968
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53014
No description provided.