Initial fix for T53014: Cycles material preview no light

This was introduced on 9ad2c0b6154.

Although this still doesn't fix the issue, it updates the preview
system to use COLLECTION_DISABLED as intended.

What is missing now is for the flushing to work effectively.